# Video_Streaming_Flask

./: .gitignore  Live_Video_Screen_Streaming.py  Procfile  README.md  Readme.md  app.py  app_Screen_Sharing.py  app_Video_Streaming.py  flaskvideostream.py  pyproject.toml  requirements.txt  test.py  test1_Video_Capture.py  test2_Screen_capture.py
.old/: Readme.md  app_Video_Streaming.py  requirements.txt
.old/templates/: index.html
flask_opencv_streaming/: core.py
template/: index.html
templates/: index.html
tests/: test_flask_opencv_streaming.py
